# moorellm

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  py-modindex.html  pyproject.toml  readme.html
_modules/moorellm/: main.html  models.html  utils.html
_sources/: examples.rst.txt
docs/: conf.py  index.rst  readme.rst
examples/: 01_light_switch.py  02_user_identification.py
html/: examples.html  moorellm.html  objects.inv  search.html  searchindex.js
html/_modules/: index.html
html/_modules/examples/: 01_light_switch.html
html/_sources/: moorellm.rst.txt
src/moorellm/: __init__.py  main.py  misc.py  models.py  utils.py
tests/: test_basic_contexts_config.py  test_basic_state.py  test_basic_transitions.py  test_constructs.py  test_imm_state.py  test_jinja2_engine.py  test_openai_mock.py
